<resources>
    <string name="app_name">View &amp; Resources</string>
    <string name="textField_name">Name</string>
    <string name="textField_phone">Phone number</string>
    <string name="textField_phoneS">Select</string>
    <string name="textField_address">Address</string>
    <string name="textField_city">City</string>
    <string name="textField_state">State</string>
    <string name="textField_zip">Zip</string>
    <string name="textField_birthday">Birthday</string>
    <string name="textField_notes">Notes</string>
    <string name="button_contacts">Register</string>
    <string name="textview_top">4 items in your cart</string>
    <string name="textView_cart_main">On the top</string>
    <string name="textView_cart_main2">Forever Friends</string>
    <string name="textView_cart_main3">Prototyping Kit</string>
    <string name="textView_cart_main4">Basket &amp; Coffee</string>
    <string name="textView_cart_second">Caption</string>
    <string name="textView_cart_second2">Caption</string>
    <string name="textView_cart_second3">Caption</string>
    <string name="textView_cart_second4">Caption</string>
    <string name="textView_cart_price">$US,1.50</string>
    <string name="textView_cart_price2">$US,4.50</string>
    <string name="textView_cart_price3">$US,8.00</string>
    <string name="textView_cart_price4">$US,22.00</string>
    <string name="button_pay">Pay now</string>
    <string name="textField_login">E-mail</string>
    <string name="textView_total_main">Your order total</string>
    <string name="textView_total_price">41.24</string>
    <string name="textView_total_subtotal">Subtotal</string>
    <string name="textView_total_shipping">Shipping</string>
    <string name="textView_total_tax">Tax</string>
    <string name="textView_total_subtotal_price">35.00</string>
    <string name="textView_total_shipping_price">2.00</string>
    <string name="textView_total_tax_price">3.50</string>
    <string name="singIn_main">Sing In</string>
    <string name="singIn_register">Register</string>
    <string name="textField_password">Password</string>
    <string name="textView_singIn_reset">Reset my password</string>
    <string name="button_singIn">Sing in</string>
</resources>